--- a/static/css/split/032_priority1_app_shell.css
+++ b/static/css/split/032_priority1_app_shell.css
@@ -123,7 +123,6 @@ body {
   display: flex;
   flex-direction: column;
   height: 100vh;
-  overflow: hidden;
 }
 
 .page {
